try fix heading flicker

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -15,7 +15,7 @@
 }
 
 .prose img {
-  @apply block rounded object-cover;
+  @apply block rounded object-cover md:rounded-xl;
 }
 
 /*
